--- a/code/control/src/main/java/com/hosticlefifer/lsm_control/App.form
+++ b/code/control/src/main/java/com/hosticlefifer/lsm_control/App.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="943" height="572"/>
+      <xy x="20" y="20" width="977" height="572"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -167,7 +167,7 @@
           </component>
         </children>
       </grid>
-      <grid id="b49de" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b49de" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="4" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -177,14 +177,14 @@
         <children>
           <component id="cc960" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font name="Cantarell Extra Bold"/>
               <text value="Scan:"/>
             </properties>
           </component>
-          <grid id="cb080" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+          <grid id="cb080" binding="scanR" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -198,38 +198,28 @@
                   <text value="Resolution:"/>
                 </properties>
               </component>
-              <component id="2458b" class="javax.swing.JSpinner" binding="xRes">
+              <component id="2458b" class="javax.swing.JSpinner" binding="resolution">
                 <constraints/>
                 <properties>
                   <autoscrolls value="true"/>
                 </properties>
               </component>
-              <component id="21ece" class="javax.swing.JLabel">
-                <constraints/>
-                <properties>
-                  <text value="X"/>
-                </properties>
-              </component>
-              <component id="a7707" class="javax.swing.JSpinner" binding="yRes">
-                <constraints/>
-                <properties/>
-              </component>
               <component id="8e268" class="javax.swing.JLabel">
                 <constraints/>
                 <properties>
-                  <text value="Scaling:"/>
+                  <text value="FOV (%):"/>
                 </properties>
               </component>
-              <component id="f1e7d" class="javax.swing.JSpinner" binding="xyScale">
+              <component id="f1e7d" class="javax.swing.JSpinner" binding="fov">
                 <constraints/>
                 <properties/>
               </component>
             </children>
           </grid>
-          <grid id="cf229" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="cf229" binding="scanP" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -270,18 +260,16 @@
                 </constraints>
                 <properties>
                   <model>
-                    <item value="ZigZag"/>
                     <item value="Consecutive"/>
-                    <item value="Discrete"/>
                   </model>
                 </properties>
               </component>
             </children>
           </grid>
-          <grid id="34112" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="34112" binding="scanZ" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -294,7 +282,7 @@
                   <text value="Z Scanning:"/>
                 </properties>
               </component>
-              <component id="e5c20" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <component id="e5c20" class="javax.swing.JComboBox" binding="zScanType">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -349,10 +337,10 @@
               </component>
             </children>
           </grid>
-          <grid id="273bd" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="273bd" binding="scanM" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -365,7 +353,7 @@
                   <text value="Mode:"/>
                 </properties>
               </component>
-              <component id="f1781" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+              <component id="f1781" class="javax.swing.JComboBox" binding="scanMode">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -378,6 +366,14 @@
               </component>
             </children>
           </grid>
+          <component id="3b113" class="javax.swing.JCheckBox" binding="listPointsCheckBox" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="List points"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="95019" class="javax.swing.JButton" binding="runButton" default-binding="true">
@@ -407,7 +403,7 @@
           <text value="Focus:"/>
         </properties>
       </component>
-      <component id="9aa47" class="javax.swing.JComboBox" binding="comboBox3" default-binding="true">
+      <component id="9aa47" class="javax.swing.JComboBox" binding="focusMode">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -464,15 +460,15 @@
           <text value="No Data."/>
         </properties>
       </component>
-      <component id="e0ab4" class="javax.swing.JButton" binding="calculateButton" default-binding="true">
+      <component id="e0ab4" class="javax.swing.JButton" binding="focusButton">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Calculate"/>
+          <text value="find"/>
         </properties>
       </component>
-      <scrollpane id="159c3">
+      <scrollpane id="159c3" binding="scroll">
         <constraints>
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -500,7 +496,7 @@
       <hspacer id="a5bb2">
         <constraints>
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="10" height="-1"/>
+            <minimum-size width="180" height="-1"/>
           </grid>
         </constraints>
       </hspacer>
